--- a/NewTeacher/Login.resx
+++ b/NewTeacher/Login.resx
@@ -327,4 +327,28 @@
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>38</value>
   </metadata>
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAEBAAAAEAIABoBAAAFgAAACgAAAAQAAAAIAAAAAEAIAAAAAAAAAQAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAPiXNs34lzbf+Jc23/iXNt/4lzbf+Jc23/iXNt/4lzbf+Jc23/iXNt/4lzbf+Jc23/iX
+        Nt/4lzbf+Zc1LAAAAAD5lzaz+Zg3//mYN//5mDf/+Zg3//mYN//5mDb7+Zg3//mYN//5mDf/+Zg3//mY
+        N//5mDf/+Zg2+/+XOAgAAAAA+Zg2ePmYN//5mDf/+Zg3//mYN//5lza7+Zc2u/iYN/f5mDaB+Zg3//mY
+        N//5mDf/+Zg3//mXNsMAAAAAAAAAAPmYNyT5mDf/+Zg3//mYN//5mDf/+Jg3XPiXNnz5lzbH+Zk2FPmY
+        Nvv5mDf/+Zg3//mYN//5lzZwAAAAAAAAAAAAAAAA+Zg2XPmYNr/4mDf3+Zg2+/qaNQz5lzZ2+Zg2kwAA
+        AAD5lza7+Zg3//mYNtP4mDaH/5c4CAAAAAAAAAAAAAAAAAAAAAAAAAAA+5c0EPiXNmj4lzZI+Zc2fPiX
+        N3j5lzVs+Zc2WPqXNzAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD5lzUk+Zc1YAAA
+        AAAAAAAA+Zc2KPiXNmAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA+Jc2dAAA
+        AAAAAAAAAAAAAAAAAAD5lzV4/58wBAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA+pg2HPmX
+        Nmj5mDZw+Zc1YPqXNUD5mDZk+Zc2SPmXNmQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAPmX
+        NkD5lzZI+Zc2dPiXN4H5lzaB+Zg2VPmYNkj4lzZkAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAD5mTYU+Jc2ufqaNQz/nzAEAAAAAPubMxD4lzZc+Jc2WAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAPiXNs8AAAAA/5c4CPuXNBAAAAAA+Zc2l/mXNkAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAD4lzbf+Zc2u/mXNuf4lzf3+Jg2s/mYNu/6lzUYAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAA+Zg2UPmYNvP5mDf/+Zg3//iYN+/5mDUwAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD6mjUM+Zk2PvmZNj76mjUMAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAA//8AAIABAACAAQAAwAEAAMNDAADjQwAA//8AAP//AAD//wAA//8AAP5/AAD7/wAA+98AAPgf
+        AAD8PwAA//8AAA==
+</value>
+  </data>
 </root>
