--- a/NewTeacher/Properties/Resources.resx
+++ b/NewTeacher/Properties/Resources.resx
@@ -283,4 +283,7 @@
   <data name="_4" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\4.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="ter16" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ter16.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
