--- a/SharedForms/Resource1.resx
+++ b/SharedForms/Resource1.resx
@@ -238,7 +238,7 @@
   <data name="所有人" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\所有人.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="群聊__3_" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="群聊" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\群聊 (3).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="老师" type="System.Resources.ResXFileRef, System.Windows.Forms">
